# grezzi

./: .gitignore  Dockerfile  clean.py  clean_and_merge.ipynb  data.json  db.py  docker-compose-local.yml  docker-compose.yml  file_log.txt  gi_comuni_cap.csv  log.txt  main.py  pyproject.toml  stack.env
templates/: index.html  list_files.html  login.html
