[project]
name = "grezzi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-socketio>=0.0.10",
    "fastapi[standard]>=0.115.8",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

