[project]
name = "grezzi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-socketio>=0.0.10",
    "fastapi[standard]>=0.115.8",
    "ipykernel>=6.29.5",
    "itsdangerous>=2.2.0",
    "jsonify>=0.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]

